# SimpleEventHandler

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
example/: __init__.py
simple_event_handler/: __init__.py  simple_event_handler.py
