[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SimpleEventHandler"
version = "0.1"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Resch-Said/SimpleEventHandler"

[tool.hatch.build.targets.wheel]
packages = ["simple_event_handler"]
